# rad

./: .env.development  .gitignore  pyproject.toml  readme.md  render.yaml  scratchpad.http
.devcontainer/development/: Dockerfile  devcontainer.json
.devcontainer/test/: devcontainer.json
arial/: vectara.py
backend/: .env.development  .env.docker  Makefile  docker-compose.yml  pyproject.toml
backend/app/: main.py  schema.py
backend/app/api/: crud.py
backend/app/chat/: engine.py  messaging.py  pg_vector.py  tools.py
backend/app/core/: __init__.py  config.py
backend/scripts/: seed_db.py
frontend/: .eslintrc.json  .gitignore  .pnp.cjs  Dockerfile  next.config.mjs  package.json  tailwind.config.ts
frontend/src/: config.js  env.mjs
frontend/src/api/: backend.tsx
frontend/src/api/utils/: documents.tsx
frontend/src/app/: page.tsx
frontend/src/app/conversation/: [id].tsx
frontend/src/app/conversation/[id]/: page.tsx
frontend/src/components/conversations/: RenderConversations.tsx
frontend/src/components/pdf-viewer/: DisplayMultiplePdfs.tsx  PdfOptionsBar.tsx  ViewPdf.tsx  VirtualizedPdf.tsx
frontend/src/context/: pdf.tsx
frontend/src/hooks/: useDocumentSelector.tsx  useMessages.tsx  usePdfViewer.tsx
frontend/src/types/: conversation.tsx  document.tsx
frontend/src/utils/: documents.tsx  landing-page-selection.tsx
rad/: chatio.py  diffbot.py  vectara.py
rad/diffbot/: index.py  query.py  retriever.py
rad/notebooks/: .gitignore  RAD-13_ChatWithRAG.ipynb  RAD-15_DownloadPdfs.ipynb  RAD-15_ScrapeAndOrganizeDOR.ipynb  app_forms.py  app_info.py  app_markdown.py  download_pdfs.py  download_utils.py  sandbox_agents_intro.ipynb  sandbox_problem_setup_brainstorm.ipynb  sandbox_todos_deprecated.md
samples/: diffbot_1.json
tmp-frontend/src/hooks/: useMultiplePdfs.tsx
