[tool.poetry]
name = "rad"
version = "0.1.0"
description = "rag enabled assistants for disabilities"
authors = [
  "John Cocjin <fill in>",
  "Shota Makino <shotes.makino@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
llama-index = "^0.9.42.post1"
arxiv = "^2.1.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
