[tool.poetry]
name = "rad"
version = "0.1.0"
description = "rag enabled assistants for disabilities"
authors = [
  "John Cocjin <fill in>",
  "Shota Makino <shotes.makino@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
llama-index = "^0.9.42.post1"
arxiv = "^2.1.0"
python-dotenv = "^1.0.1"
setuptools = "^69.0.3"
distribute = "^0.7.3"
llama-cpp-python = "^0.2.38"
transformers = "^4.37.2"
torch = "^2.2.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
