[tool.poetry]
name = "rad"
version = "0.1.0"
description = "rag enabled assistants for disabilities"
authors = [
  "John Cocjin <fill in>",
  "Shota Makino <shotes.makino@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
numpy = "^1.26.3"
llama-index = {git = "https://github.com/run-llama/llama_index.git"}
arxiv = { version = "^2.1.0", optional = true }
python-dotenv = "^1.0.1"
setuptools = "^69.0.3"
distribute = "^0.7.3"
llama-cpp-python = { version = "^0.2.38", optional = true }
transformers = { version = "^4.37.2", optional = true }
torch = { version = "^2.2.0", optional = true }

[tool.poetry.extras]
local_llm=["llama-cpp-python", "transformers", "torch"]
data=["arxiv"]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
